# nord

./: .gitattributes  .gitignore  .pylintrc  MANIFEST.in  README.md  README.rst  package.json  requirements.txt  setup.cfg  setup.py  webpack.config.js  webpack.dev.js
docs/: Makefile  environment.yml
docs/source/: changelog.rst  conf.py  index.rst  overview.rst  reference.rst
docs/source/reference/: api.rst  vpn.rst  web.rst
nord/: __init__.py  _utils.py  _version.py  api.py  cli.py  vpn.py
nord/web/: __init__.py  api.py
web/: Nord.jsx  index.html  index.jsx
web/components/: Nord.jsx
web/static/: LICENSE  styles.css
